--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@govtechsg/decentralized-renderer-react-components": "^3.0.4",
     "@types/react": "^16.9.48",
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.15",
